--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "mini_rt.h": "c"
+        "mini_rt.h": "c",
+        "unistd.h": "c",
+        "pthread.h": "c"
     }
 }
